objects/Activity.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Order_Type__c</fullName>
        <description>Denotes the order type on event for the related work order</description>
        <inlineHelpText>Denotes the order type on event for the related work order</inlineHelpText>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Asset Genius</fullName>
                </value>
                <value>
                    <fullName>Billable Calibration</fullName>
                </value>
                <value>
                    <fullName>Billable LabMetrix</fullName>
                </value>
                <value>
                    <fullName>Billable PM</fullName>
                </value>
                <value>
                    <fullName>Billable Qualification</fullName>
                </value>
                <value>
                    <fullName>Billable Repair</fullName>
                </value>
                <value>
                    <fullName>Billable UOQ</fullName>
                </value>
                <value>
                    <fullName>Biomatic</fullName>
                </value>
                <value>
                    <fullName>Calibration</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Consumable sales on contract</fullName>
                </value>
                <value>
                    <fullName>Engineering Change Order</fullName>
                </value>
                <value>
                    <fullName>Inside Service Call</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Installation Qualification</fullName>
                </value>
                <value>
                    <fullName>Instr. Performance Validation</fullName>
                </value>
                <value>
                    <fullName>Labmetrix IQ</fullName>
                </value>
                <value>
                    <fullName>Laboratory IT</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>OQ/PQ</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Planned Maintenance</fullName>
                </value>
                <value>
                    <fullName>Pre Install Visit</fullName>
                </value>
                <value>
                    <fullName>Qualification - Lab Manager</fullName>
                </value>
                <value>
                    <fullName>Quote / Estimate</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Scientific Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplies_Delivered__c</fullName>
        <label>Supplies Delivered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Completion_Date__c</fullName>
        <description>SAM Integration Best Action Completion Date</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Specialist__c</fullName>
        <inlineHelpText>Assigned Specialist for Pre Sales Technical Support (for specialist without salesforce access).</inlineHelpText>
        <label>Specialist Assigned*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Agreement__c</fullName>
        <label>Discovery Agreement Attached</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CategoryType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialist_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialist Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Category_field__c</fullName>
        <label>Event Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NTD FTS</fullName>
                </value>
                <value>
                    <fullName>NTD STS</fullName>
                </value>
                <value>
                    <fullName>NTD PE</fullName>
                </value>
                <value>
                    <fullName>ViaCord</fullName>
                </value>
                <value>
                    <fullName>VHI NIPT</fullName>
                </value>
                <value>
                    <fullName>GSG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Sales_Start_Time__c</fullName>
        <label>Pre Sales Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Time_Spent__c</fullName>
        <formula>(floor((Pre_Sales_End_Time__c - Pre_Sales_Start_Time__c)*24)) 
+ 
(((((Pre_Sales_End_Time__c - Pre_Sales_Start_Time__c)*24)-floor((Pre_Sales_End_Time__c - Pre_Sales_Start_Time__c)*24))*60)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Sales Time Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact_Name__c</fullName>
        <description>Denotes the event&apos;s contact name</description>
        <inlineHelpText>Denotes the event&apos;s contact name</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Rating_Sec__c</fullName>
        <inlineHelpText>Please rate using 5 as the highest rating, 1 as the lowest</inlineHelpText>
        <label>Collateral Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact_Phone__c</fullName>
        <description>Denotes the contact phone number</description>
        <inlineHelpText>Denotes the contact phone number</inlineHelpText>
        <label>Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_TS_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox is used to enter non-Work Order-related time that should be tracked.  For example; Training, PTO, Admin time, etc.</inlineHelpText>
        <label>Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_of_the_Request__c</fullName>
        <label>Status of the Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted to Sales Leader</fullName>
                </value>
                <value>
                    <fullName>Submitted to Specialist Leader</fullName>
                </value>
                <value>
                    <fullName>Rejected by Sales Leader</fullName>
                </value>
                <value>
                    <fullName>Specialist Assigned</fullName>
                </value>
                <value>
                    <fullName>Rejected by Specialist Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Spent_Travelling__c</fullName>
        <inlineHelpText>Enter the number of hours that it takes you on top of the activity time to get to and from the activity.</inlineHelpText>
        <label>Hours Spent Traveling</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Collateral_Piece__c</fullName>
        <label>Other Collateral Piece</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wallet_Share_Expansion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wallet Share Expansion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Priority_EMEA__c</fullName>
        <label>Strategic Priority EMEA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Detection – Academic</fullName>
                </value>
                <value>
                    <fullName>Detection – Cancer</fullName>
                </value>
                <value>
                    <fullName>Detection – Inflammation</fullName>
                </value>
                <value>
                    <fullName>Detection – Metabolism</fullName>
                </value>
                <value>
                    <fullName>Detection – Neuroscience</fullName>
                </value>
                <value>
                    <fullName>HCS – Microbe</fullName>
                </value>
                <value>
                    <fullName>HCS – Immunotherapy</fullName>
                </value>
                <value>
                    <fullName>HCS – Metabolic</fullName>
                </value>
                <value>
                    <fullName>INV -  Optical Install Base</fullName>
                </value>
                <value>
                    <fullName>INV – Soft Tissue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Used_secondary__c</fullName>
        <label>Collateral Used</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Secondary_Detail__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3 Stages of Care Visual Aid</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue Detail Aid</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue Results Letter</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue Visual aid</fullName>
                </value>
                <value>
                    <fullName>CPD / Heparin Flashcard</fullName>
                </value>
                <value>
                    <fullName>DBS Card</fullName>
                </value>
                <value>
                    <fullName>Demo Collection Kit</fullName>
                </value>
                <value>
                    <fullName>FAQ’s</fullName>
                </value>
                <value>
                    <fullName>FTS | Fβ Patient brochure</fullName>
                </value>
                <value>
                    <fullName>FTS with IRA instruction sheet for patients</fullName>
                </value>
                <value>
                    <fullName>Info Kit</fullName>
                </value>
                <value>
                    <fullName>NTD Contact Card</fullName>
                </value>
                <value>
                    <fullName>NTD  IRA home collection kit</fullName>
                </value>
                <value>
                    <fullName>NTD Visual Aid 2011</fullName>
                </value>
                <value>
                    <fullName>Online Education Card</fullName>
                </value>
                <value>
                    <fullName>Online Education Green Form</fullName>
                </value>
                <value>
                    <fullName>Options &amp; Answers Easel Back</fullName>
                </value>
                <value>
                    <fullName>PE folder</fullName>
                </value>
                <value>
                    <fullName>Physician Sell Sheet of Test Comparison</fullName>
                </value>
                <value>
                    <fullName>Research Flashcard</fullName>
                </value>
                <value>
                    <fullName>Sample blood card/test requisition form</fullName>
                </value>
                <value>
                    <fullName>Sample results report</fullName>
                </value>
                <value>
                    <fullName>SEQ | Fβ Patient brochure</fullName>
                </value>
                <value>
                    <fullName>Slim Jim</fullName>
                </value>
                <value>
                    <fullName>Survival Rate Flashcard</fullName>
                </value>
                <value>
                    <fullName>Transplant / Infusion Summary</fullName>
                </value>
                <value>
                    <fullName>Visual Aid 2011</fullName>
                </value>
                <value>
                    <fullName>z.default value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order_Number__c</fullName>
        <description>Denotes the event&apos;s related work order number</description>
        <inlineHelpText>Denotes the event&apos;s related work order number</inlineHelpText>
        <label>Work Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DX_Collateral_Used_ViaCord__c</fullName>
        <label>DX Collateral Used - ViaCord</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vis Aids</fullName>
                </value>
                <value>
                    <fullName>2008 CONTEMP OBGYN ARTICLE</fullName>
                </value>
                <value>
                    <fullName>3 STAGES CARE LEAVE BEHIND SELL SHEET</fullName>
                </value>
                <value>
                    <fullName>ART REPRINT BY DR. PERLOW OF IMP</fullName>
                </value>
                <value>
                    <fullName>ASD - PRICING LEAFLET</fullName>
                </value>
                <value>
                    <fullName>ASD VISUAL AID</fullName>
                </value>
                <value>
                    <fullName>ASH SELL SHEET</fullName>
                </value>
                <value>
                    <fullName>COLLECTION FLASHCARD</fullName>
                </value>
                <value>
                    <fullName>CONSENT FORMS IN TEAR OFF PADS</fullName>
                </value>
                <value>
                    <fullName>CONSENT FORM - SPANISH</fullName>
                </value>
                <value>
                    <fullName>CONTEM OBGYN SUPP ON CORD TISSUE MSCS</fullName>
                </value>
                <value>
                    <fullName>CORD BLOOD 101 BROCHURE</fullName>
                </value>
                <value>
                    <fullName>CORD BLOOD BANKING FAQS ENGLISH</fullName>
                </value>
                <value>
                    <fullName>CORD BLOOD BANKING FAQS SPANISH</fullName>
                </value>
                <value>
                    <fullName>CORD TISSUE SLIM JIM</fullName>
                </value>
                <value>
                    <fullName>CORD TISSUE VISUAL AID</fullName>
                </value>
                <value>
                    <fullName>CPD/Heparin Flashcard</fullName>
                </value>
                <value>
                    <fullName>Current Promo Coupon</fullName>
                </value>
                <value>
                    <fullName>DR. STONE ARTICLE FROM JANUARY 2010</fullName>
                </value>
                <value>
                    <fullName>ENHANCED PRODUCT VISUAL AID</fullName>
                </value>
                <value>
                    <fullName>FAQS FOR LABOR &amp; DELIVERY</fullName>
                </value>
                <value>
                    <fullName>GOLD STANDARD BROCHURE</fullName>
                </value>
                <value>
                    <fullName>HEPARIN FREE PHYSICIANS SELL SHEET</fullName>
                </value>
                <value>
                    <fullName>LAB FLASH CARD</fullName>
                </value>
                <value>
                    <fullName>LANCET - ALLOGENEIC SIBLING CORD BLOOD</fullName>
                </value>
                <value>
                    <fullName>LIFETIME PROBABILITY ARTICLE</fullName>
                </value>
                <value>
                    <fullName>NATIONAL PROMO PADS</fullName>
                </value>
                <value>
                    <fullName>NEW ENGLAND JOURNAL OF MEDICINE # 337</fullName>
                </value>
                <value>
                    <fullName>NEW ENGLAND JOURNAL OF MEDICINE # 343</fullName>
                </value>
                <value>
                    <fullName>NEW ENGLAND JOURNAL OF MEDICNE # 342</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DX_Collateral_Used_NTD_NIPT__c</fullName>
        <description>This field is accessible by Viacord Marketing users</description>
        <label>DX Collateral Used - NTD &amp; NIPT</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACMG PRACTICE GUIDELINES</fullName>
                </value>
                <value>
                    <fullName>ACOG PRACTICE BULLETIN 77</fullName>
                </value>
                <value>
                    <fullName>BORRELL 1ST TRIMESTER SCREENING</fullName>
                </value>
                <value>
                    <fullName>BUJOLD ASPIRIN META ANALY</fullName>
                </value>
                <value>
                    <fullName>CHROM ABNORMAL DETECT</fullName>
                </value>
                <value>
                    <fullName>CLINIC BENEFIT 1ST TRIMESTER BIOCHEM SCN</fullName>
                </value>
                <value>
                    <fullName>COPY OF NEW BLOOD CARD</fullName>
                </value>
                <value>
                    <fullName>EVANS BIOCHEM SCREENING</fullName>
                </value>
                <value>
                    <fullName>EVANS META-ANALYSIS</fullName>
                </value>
                <value>
                    <fullName>FASTER STUDY</fullName>
                </value>
                <value>
                    <fullName>FIRST AND SECOND TRIMESTER SERUM</fullName>
                </value>
                <value>
                    <fullName>FIRST TRIMESTER SCREEN PATIENT BROCHURE</fullName>
                </value>
                <value>
                    <fullName>1st TRIMESTER SCRN PAT BROCHURE-SPANISH</fullName>
                </value>
                <value>
                    <fullName>FUTCH 2013, INITIAL CLINICAL LAB EXP</fullName>
                </value>
                <value>
                    <fullName>GIGUERE PE A SYSTEMATIC REVIEW</fullName>
                </value>
                <value>
                    <fullName>IRA PATIENT INSTRUCTION SHEET</fullName>
                </value>
                <value>
                    <fullName>MELISSA STUDY 2012 - GREEN JOUR ARTICLE</fullName>
                </value>
                <value>
                    <fullName>NIPT EVANS MONOGRAPH:</fullName>
                </value>
                <value>
                    <fullName>NONINVASIVE PRENATAL TEST - CLINIC ASSES</fullName>
                </value>
                <value>
                    <fullName>NT CERTIFICATION PROCESS INFO SHEET</fullName>
                </value>
                <value>
                    <fullName>NT CERTIFICATION PROC WITH TRAINER INFO</fullName>
                </value>
                <value>
                    <fullName>NTD - FTS - IRA INSTRUCTION SHT - SPANIS</fullName>
                </value>
                <value>
                    <fullName>NTD BILLING AND INSURANCE FACTS</fullName>
                </value>
                <value>
                    <fullName>NTD COMPREHENSIVE PHYSICIAN LEAVE BEHIND</fullName>
                </value>
                <value>
                    <fullName>NTD PREECLAMPSIA SCREEN | T1 WHITE PAPER</fullName>
                </value>
                <value>
                    <fullName>NTD REPORTS FLAGS PHYSICIAN BROCHURE</fullName>
                </value>
                <value>
                    <fullName>NUCHAL TRANSLUCENCY QLTY REVIEW PROG BRO</fullName>
                </value>
                <value>
                    <fullName>PE CUCKLE MONOGRAPH</fullName>
                </value>
                <value>
                    <fullName>PE TECHNICAL BRIEF</fullName>
                </value>
                <value>
                    <fullName>PERKINELMER BILLING INFORMATION SHEET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Collateral_Piece_s__c</fullName>
        <label>Marketing Collateral Piece(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Marketing_Collateral_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1st TRIMESTER SCREEN PAT BROC-SPANISH</fullName>
                </value>
                <value>
                    <fullName>2008 CONTEM OBGYN ARTICLE SUPPELEMENT</fullName>
                </value>
                <value>
                    <fullName>3 STAGES CARE LEAVE BEHIND SELL SHEET</fullName>
                </value>
                <value>
                    <fullName>ACMG PRACTICE GUIDELINES</fullName>
                </value>
                <value>
                    <fullName>ACOG PRACTICE BULLETIN 77</fullName>
                </value>
                <value>
                    <fullName>ARTICLE REPRINT BY DR. PERLOW OF IMP</fullName>
                </value>
                <value>
                    <fullName>ASD - PRICING LEAFLET</fullName>
                </value>
                <value>
                    <fullName>ASD MEDIA RELEASE</fullName>
                </value>
                <value>
                    <fullName>ASD VISUAL AID</fullName>
                </value>
                <value>
                    <fullName>ASH SELL SHEET</fullName>
                </value>
                <value>
                    <fullName>BORRELL 1ST TRIMESTER SCREENING</fullName>
                </value>
                <value>
                    <fullName>BUJOLD ASPIRIN META ANALYSIS</fullName>
                </value>
                <value>
                    <fullName>CHROMOSOME ABNORMALITIES DETECTE</fullName>
                </value>
                <value>
                    <fullName>CLINIC BENEFIT 1ST TRIMEST BIOCHEM SCRN</fullName>
                </value>
                <value>
                    <fullName>COLLECTION FLASHCARD</fullName>
                </value>
                <value>
                    <fullName>CONSENT FORMS IN TEAR OFF PADS</fullName>
                </value>
                <value>
                    <fullName>CONSENT FORMS SPANISH</fullName>
                </value>
                <value>
                    <fullName>CONTEMPOBGYN SUPP ON CORD TISSUE MSCS</fullName>
                </value>
                <value>
                    <fullName>COPY OF NEW BLOOD CARD</fullName>
                </value>
                <value>
                    <fullName>CORD BLOOD 101 BROCHURE</fullName>
                </value>
                <value>
                    <fullName>CORD BLOOD BANKING FAQS ENGLISH</fullName>
                </value>
                <value>
                    <fullName>CORD BLOOD BANKING FAQS SPANISH</fullName>
                </value>
                <value>
                    <fullName>CORD TISSUE SLIM JIM</fullName>
                </value>
                <value>
                    <fullName>CORD TISSUE VISUAL AID</fullName>
                </value>
                <value>
                    <fullName>DR. STONE ARTICLE FROM JANUARY 2010</fullName>
                </value>
                <value>
                    <fullName>ENHANCED PRODUCT VISUAL AID</fullName>
                </value>
                <value>
                    <fullName>EVANS BIOCHEMICAL SCREENING</fullName>
                </value>
                <value>
                    <fullName>EVANS META-ANALYSIS</fullName>
                </value>
                <value>
                    <fullName>FAQS FOR LABOR AND DELIVERY</fullName>
                </value>
                <value>
                    <fullName>FASTER STUDY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Collateral_Category__c</fullName>
        <label>Marketing Collateral Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NTD Collateral</fullName>
                </value>
                <value>
                    <fullName>NTD Articles/Journals</fullName>
                </value>
                <value>
                    <fullName>NTD Preeclampsia Screen</fullName>
                </value>
                <value>
                    <fullName>Verifi Marketing Collateral</fullName>
                </value>
                <value>
                    <fullName>ViaCord Consumer Materials</fullName>
                </value>
                <value>
                    <fullName>ViaCord Professional Materials</fullName>
                </value>
                <value>
                    <fullName>Cord Blood Articles/Journals</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order_Record_Type__c</fullName>
        <description>Denotes the work order record type</description>
        <inlineHelpText>Denotes the work order record type</inlineHelpText>
        <label>Work Order Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>